Add google api key into environment config (due to recent google policy change which requies a key)

--- a/app/views/shared/google_maps/_google_map_api.html.erb
+++ b/app/views/shared/google_maps/_google_map_api.html.erb
@@ -1,1 +1,1 @@
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3&libraries=places" %>
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3&libraries=places&key=#{ENV['GOOGLE_API_KEY']}" %>
