Hide/unhide calendar view [fixes#124142781]

--- a/app/views/runs/index.html.haml
+++ b/app/views/runs/index.html.haml
@@ -8,6 +8,34 @@
 .col-md-3{style: 'padding: 0px 15px 0px 0px;'}
   = render :partial => 'filters'
 .col-md-9{style: 'padding: 0px;'}
+  .checkbox.pull-right
+    %label
+      %input#hide_run_calendar{type: 'checkbox'}
+      %b
+        = translate_helper("hide_calendar")
   = render 'trips/calendar', base_path: runs_path, resources: @day_resources, events: @runs_json
 
   = render :partial => 'list'
+
+:javascript
+  $(function() {
+    // hide/unhide calendar
+    function manage_calendar_hidden_status() {
+      var is_calendar_hidden = (localStorage.getItem('run_calendar_hidden') == 'true');
+      if(is_calendar_hidden) {
+        $('#calendar').hide();
+      } else {
+        $('#calendar').show();
+      }
+    }
+
+    $('#hide_run_calendar').change(function() {
+      var checked = $(this).prop('checked');
+      localStorage.setItem('run_calendar_hidden', checked || false);
+
+      manage_calendar_hidden_status();
+    });
+
+    manage_calendar_hidden_status();
+    $('#hide_run_calendar').prop('checked', (localStorage.getItem('run_calendar_hidden') == 'true'));
+  });
