--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -7,6 +7,11 @@
 .col-md-3{style: 'padding: 0px 15px 0px 0px;'}
   = render :partial => 'filters'
 .col-md-9{style: 'padding: 0px;'}
+  .checkbox.pull-right
+    %label
+      %input#hide_trip_run_calendar{type: 'checkbox'}
+      %b
+        = translate_helper("hide_calendar")
   = render 'trips/calendar', base_path: trips_path, resources: @runs_json, events: @trips_json,  currentDate: @run_trip_day
   .col-sm-12{style: 'padding: 0px 0px 10px 0px;'}
     .pull-left
@@ -120,5 +125,24 @@
       manageSchedulingButtons();
     });
 
+    // hide/unhide calendar
+    function manage_calendar_hidden_status() {
+      var is_calendar_hidden = (localStorage.getItem('trip_run_calendar_hidden') == 'true');
+      if(is_calendar_hidden) {
+        $('#calendar').hide();
+      } else {
+        $('#calendar').show();
+      }
+    }
+
+    $('#hide_trip_run_calendar').change(function() {
+      var checked = $(this).prop('checked');
+      localStorage.setItem('trip_run_calendar_hidden', checked || false);
+
+      manage_calendar_hidden_status();
+    });
+
+    manage_calendar_hidden_status();
+    $('#hide_trip_run_calendar').prop('checked', (localStorage.getItem('trip_run_calendar_hidden') == 'true'));
   });
 
