WIP: driver manifest [#124142371]

--- a/app/views/reports/driver_manifest.html.haml
+++ b/app/views/reports/driver_manifest.html.haml
@@ -12,5 +12,8 @@
   %h1{style: 'text-align: center;'}
     %u
       = translate_helper("driver_manifest_heading")
+      
+- @runs.each do |run|
+  = render 'driver_manifest_run', run: run
 
        
