--- a/app/views/addresses/_new_form.html.erb
+++ b/app/views/addresses/_new_form.html.erb
@@ -4,7 +4,7 @@
   <%= hidden_field_tag 'prefix', prefix %>
   <fieldset>
   <ol class="section">
-    <%= render 'addresses/form_fields', form: form, address: address, prefix: prefix %>
+    <%= render 'addresses/geocoding_form_fields', form: form, address: address, prefix: prefix %>
   </ol>
   </fieldset>
 <% end %>
