--- a/app/views/reports/driver_manifest/_run.html.haml
+++ b/app/views/reports/driver_manifest/_run.html.haml
@@ -15,8 +15,8 @@
   }
 = render 'reports/driver_manifest/run_header', run: run
 .row
-  %table
-    %thead{style: 'border: 2px solid black;'}
+  %table{style: 'font-size: 14px;'}
+    %thead{style: 'border: 2px solid black; font-size: 18px;'}
       %th{style: 'border-left: 2px black solid;'} P/D 
       %th Client/Address
       %th Pickup Time
