--- a/app/views/reports/driver_manifest/_run_header.html.haml
+++ b/app/views/reports/driver_manifest/_run_header.html.haml
@@ -1,33 +1,43 @@
 .row
   .pull-left{style: 'padding-left: 0px;font-size: 16px;font-weight: bold;'}
-    %p= run.driver.try(:name) || "(#{translate_helper("no_driver")})"
+    %p= run.driver.try(:name) || "(#{translate_helper('no_driver')})"
     %p
-      = "Vehicle #"
+      = "#{translate_helper('driver_manifest_vehicle')} #"
       %u
         =run.vehicle.try(:name)
-    %p= "Run: #{run.try(:name)}"
-    %p= "Scheduled Run Time: #{format_time_for_listing(run.scheduled_start_time)} - #{format_time_for_listing(run.scheduled_end_time)}"
+    %p
+      = translate_helper("driver_manifest_run") 
+      = ": #{run.try(:name)}"
+    %p
+      = translate_helper("driver_manifest_scheduled_run_time") 
+      = ": #{format_time_for_listing(run.scheduled_start_time)} - #{format_time_for_listing(run.scheduled_end_time)}"
   .pull-right{style: 'border: 1px solid black; padding: 0px; width: 470px;'}
     %table{style: 'font-size: 14px;'}
       %tbody
         %tr
           %td{style: 'width: 120px;'}
-            Run Start Time:
+            = translate_helper("driver_manifest_run_start_time") 
+            = ":"
           %td{style: 'border-bottom: 1px solid black; width: 100px;'}
           %td{style: 'width: 150px;'}
-            Run End Time:
+            = translate_helper("driver_manifest_run_end_time") 
+            = ":"
           %td{style: 'border-bottom: 1px solid black; width: 100px;'}
         %tr
           %td{style: 'width: 120px;'}
-            Pullout Mileage:
+            = translate_helper("driver_manifest_pullout_mileage") 
+            = ":"
           %td{style: 'border-bottom: 1px solid black; width: 100px;'}
           %td{style: 'width: 150px;'}
-            Pullout Hour/Minute:
+            = translate_helper("driver_manifest_pullout_hour_minute") 
+            = ":"
           %td{style: 'border-bottom: 1px solid black; width: 100px;'}
         %tr
           %td{style: 'width: 120px;'}
-            Pullin Mileage:
+            = translate_helper("driver_manifest_pullin_mileage") 
+            = ":"
           %td{style: 'border-bottom: 1px solid black; width: 100px;'}
           %td{style: 'width: 150px;'}
-            Pullin Hour/Minute:
+            = translate_helper("driver_manifest_pullin_hour_minute") 
+            = ":"
           %td{style: 'border-bottom: 1px solid black; width: 100px;'}
