--- a/app/views/reports/driver_manifest/_trip.html.haml
+++ b/app/views/reports/driver_manifest/_trip.html.haml
@@ -3,7 +3,7 @@
 - customer = trip.customer
 
 %tr{style: 'font-weight: bold; font-size: 15px;'}
-  %td{style: 'font-size: 24px;'} Pick Up
+  %td{style: 'font-size: 24px;'}= translate_helper("driver_manifest_pickup") 
   %td 
     - if customer
       %p= trip.customer.try(:name) 
@@ -15,52 +15,56 @@
   %td= format_time_for_listing(trip.appointment_time)
 
 %tr
-  %td= (trip.notes.blank? ? "" : "Trip Notes:")
+  %td= (trip.notes.blank? ? "" : translate_helper("driver_manifest_trip_notes") )
   %td= trip.notes
-  %td Time Arrive (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
-  %td Time Depart (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+  %td
+    = translate_helper("driver_manifest_time_arrive")   
+    &nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+  %td  
+    = translate_helper("driver_manifest_time_depart") 
+    &nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
 
 - mobility = trip.mobility || customer.try(:mobility)
 - if mobility
   %tr
-    %td Customer
+    %td= translate_helper("driver_manifest_customer") 
     %td= mobility.name + "  1"
     %td
     %td
 
 %tr
-  %td Guests
+  %td= translate_helper("driver_manifest_guests") 
   %td= trip.guest_count
   %td
   %td
 
 %tr
-  %td Attendants
+  %td= translate_helper("driver_manifest_attendants") 
   %td= trip.attendant_count
   %td
   %td
 
 %tr
-  %td{style: 'border-bottom: 1px solid black;'} Total Passengers
+  %td{style: 'border-bottom: 1px solid black;'}= translate_helper("driver_manifest_total_passengers") 
   %td= trip.group_size
-  %td Donation $
+  %td= translate_helper("driver_manifest_donation_$") 
   %td{style: 'border: 1px solid black;'} 
 
 %tr
-  %td Mobility Devices 
+  %td= translate_helper("driver_manifest_mobility_devices")  
   %td= trip.mobility_device_accommodations || 0
   %td
   %td
 
 - if customer && customer.mobility_notes.present?
   %tr
-    %td Mobility Notes
+    %td= translate_helper("driver_manifest_mobility_notes") 
     %td= customer.mobility_notes
     %td
     %td
 
 %tr{style: 'font-weight: bold; font-size: 15px; padding-top: 10px;'}
-  %td{style: 'font-size: 24px;'} Drop Off
+  %td{style: 'font-size: 24px;'}= translate_helper("driver_manifest_dropoff") 
   %td 
     - if customer
       %p= trip.customer.try(:name) 
@@ -72,10 +76,14 @@
   %td
 
 %tr
-  %td= (trip.notes.blank? ? "" : "Trip Notes:")
+  %td= (trip.notes.blank? ? "" : translate_helper("driver_manifest_trip_notes") )
   %td= trip.notes
-  %td Time Arrive (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
-  %td Time Depart (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+  %td
+    = translate_helper("driver_manifest_time_arrive")   
+    &nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+  %td  
+    = translate_helper("driver_manifest_time_depart") 
+    &nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
 
 - if (later_customer_trips = later_trips_for_customer(customer, trip)).any?
   %tr
