--- a/app/views/reports/driver_manifest/_run_header.html.haml
+++ b/app/views/reports/driver_manifest/_run_header.html.haml
@@ -1,4 +1,4 @@
-.row
+.row{style: 'padding-top: 20px;'}
   .pull-left{style: 'padding-left: 0px;font-size: 16px;font-weight: bold;'}
     %p= run.driver.try(:name) || "(#{translate_helper('no_driver')})"
     %p
