--- a/app/views/customers/_add_address_dialog.html.haml
+++ b/app/views/customers/_add_address_dialog.html.haml
@@ -15,7 +15,7 @@
       e.preventDefault();
       var form = $("#customer-address-form");
       form.dialog( "open" );  
-      $(".address-form input").removeAttr("disabled");
+      $(".address-form input").removeAttr("disabled").removeAttr("readonly");
       form.find('form')[0].reset();
       form.find('input[type=hidden][name!=prefix]').val('');
       form.find('.error').html('');
