--- a/app/views/reports/driver_manifest/_run.html.haml
+++ b/app/views/reports/driver_manifest/_run.html.haml
@@ -22,5 +22,5 @@
       %th= translate_helper("driver_manifest_pickup_time") 
       %th{style: 'border-right: 2px black solid;'}= translate_helper("driver_manifest_appt_time") 
     %tbody
-      - run.trips.order(:pickup_time).each do |trip|
-        = render 'reports/driver_manifest/trip', trip: trip
+      - run.trips.order(:pickup_time).each_with_index do |trip, index|
+        = render 'reports/driver_manifest/trip', trip: trip, is_first_trip: (index == 0)
