Driver Manifest UI tweaks

--- a/app/views/reports/driver_manifest/_run.html.haml
+++ b/app/views/reports/driver_manifest/_run.html.haml
@@ -15,8 +15,8 @@
   }
 = render 'reports/driver_manifest/run_header', run: run
 .row
-  %table{style: 'font-size: 14px;'}
-    %thead{style: 'border: 2px solid black; font-size: 18px;'}
+  %table{style: 'font-size: 12pt;'}
+    %thead{style: 'border: 2px solid black;'}
       %th{style: 'border-left: 2px black solid;'}= translate_helper("driver_manifest_p_d") 
       %th= translate_helper("driver_manifest_client_address") 
       %th= translate_helper("driver_manifest_pickup_time") 
