--- a/app/views/reports/driver_manifest/_trip.html.haml
+++ b/app/views/reports/driver_manifest/_trip.html.haml
@@ -2,13 +2,14 @@
 - dropoff_addr = trip.dropoff_address
 - customer = trip.customer
 
-%tr{style: 'font-weight: bold; font-size: 15px;'}
-  %td{style: 'font-size: 24px;'}= translate_helper("driver_manifest_pickup") 
+%tr{style: 'font-weight: bold; font-size: 14pt;'}
+  %td{style: 'font-size: 12pt;'}= translate_helper("driver_manifest_pickup") 
   %td 
     - if customer
-      %p{style:'font-size: 18px;'}= trip.customer.try(:name) 
+      %p= trip.customer.try(:name) 
     - if pickup_addr
-      %p= pickup_addr.text
+      %p= "&nbsp;&nbsp;&nbsp;&nbsp;#{pickup_addr.name}"
+      %p= "#{pickup_addr.address}&nbsp;&nbsp;&nbsp;&nbsp;#{pickup_addr.city}"
       - if pickup_addr.notes
         %p= pickup_addr.notes
   %td= format_time_for_listing(trip.pickup_time)
@@ -32,17 +33,19 @@
     %td
     %td
 
-%tr
-  %td= translate_helper("driver_manifest_guests") 
-  %td= trip.guest_count
-  %td
-  %td
+- if trip.guest_count && trip.guest_count > 0
+  %tr
+    %td= translate_helper("driver_manifest_guests") 
+    %td= trip.guest_count
+    %td
+    %td
 
-%tr
-  %td= translate_helper("driver_manifest_attendants") 
-  %td= trip.attendant_count
-  %td
-  %td
+- if trip.attendant_count && trip.attendant_count > 0
+  %tr
+    %td= translate_helper("driver_manifest_attendants") 
+    %td= trip.attendant_count
+    %td
+    %td
 
 %tr
   %td{style: 'border-bottom: 1px solid black;'}= translate_helper("driver_manifest_total_passengers") 
@@ -50,11 +53,12 @@
   %td= translate_helper("driver_manifest_donation_$") 
   %td{style: 'border: 1px solid black;'} 
 
-%tr
-  %td= translate_helper("driver_manifest_mobility_devices")  
-  %td= trip.mobility_device_accommodations || 0
-  %td
-  %td
+- if trip.mobility_device_accommodations && trip.mobility_device_accommodations > 0
+  %tr
+    %td= translate_helper("driver_manifest_mobility_devices")  
+    %td= trip.mobility_device_accommodations
+    %td
+    %td
 
 - if customer && customer.mobility_notes.present?
   %tr
@@ -63,11 +67,11 @@
     %td
     %td
 
-%tr{style: 'font-weight: bold; font-size: 15px;'}
-  %td{style: 'font-size: 24px; padding-top: 15px;'}= translate_helper("driver_manifest_dropoff") 
+%tr{style: 'font-weight: bold; font-size: 14pt;'}
+  %td{style: 'padding-top: 12pxt;'}= translate_helper("driver_manifest_dropoff") 
   %td 
     - if customer
-      %p{style:'font-size: 18px; padding-top: 15px;'}= trip.customer.try(:name) 
+      %p{style:'padding-top: 15px;'}= trip.customer.try(:name) 
     - if dropoff_addr
       %p= dropoff_addr.text
       - if dropoff_addr.notes
