Further tweaks in driver manifest report

--- a/app/views/reports/driver_manifest/_run_header.html.haml
+++ b/app/views/reports/driver_manifest/_run_header.html.haml
@@ -12,7 +12,7 @@
       = translate_helper("driver_manifest_scheduled_run_time") 
       = ": #{format_time_for_listing(run.scheduled_start_time)} - #{format_time_for_listing(run.scheduled_end_time)}"
   .pull-right{style: 'border: 1px solid black; padding: 0px; width: 470px;'}
-    %table{style: 'font-size: 12pt;'}
+    %table{style: 'font-size: 14px;'}
       %tbody
         %tr
           %td{style: 'width: 120px;'}
