--- a/app/views/reports/driver_manifest/_run.html.haml
+++ b/app/views/reports/driver_manifest/_run.html.haml
@@ -13,7 +13,7 @@
   tr.odd {
     background: white;
   }
-= render 'reports/driver_manifest/run_header', run: run
+= render 'reports/driver_manifest/run_header', run: run, is_first_run: is_first_run
 .row
   %table{style: 'font-size: 12pt;'}
     %thead{style: 'border: 2px solid black;'}
