--- a/app/views/reports/driver_manifest/_run_header.html.haml
+++ b/app/views/reports/driver_manifest/_run_header.html.haml
@@ -1,4 +1,4 @@
-.row{style: 'padding-top: 20px;'}
+.row{style: (is_first_run ? 'padding-top: 20px;' : 'padding-top: 20px; border-top: solid 3px black;') }
   .pull-left{style: 'padding-left: 0px;font-size: 16px;font-weight: bold;'}
     %p= run.driver.try(:name) || "(#{translate_helper('no_driver')})"
     %p
