Make address name input maxlength as 30 (so to make sure it stays in one line on driver manifest report)

--- a/app/views/addresses/_geocoding_form_fields.html.erb
+++ b/app/views/addresses/_geocoding_form_fields.html.erb
@@ -9,7 +9,7 @@
 
 <li class="selfclear">
   <%= form.label :name, translate_helper("address_name") %>
-  <%= form.text_field :name %>
+  <%= form.text_field :name, maxlength: 30 %>
 </li>
 
 <li class="selfclear">
